--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323" rel="stylesheet">
     <title>DevEd</title>
 </head>
 <body>
     <section>
         <div class="container title">
-            <h1><span style="font-weight: bold">Welcome To DevEd!</span> </h1>
-            <h4>What do you want to learn about?</h4>
+            <span style="font-family: VT323; font-size: 60px">DevEd</span><br>
+            <span>Explore developement paths</span>
         </div>
     </section>
     <section>
@@ -27,7 +28,7 @@
                 <div class="devpath">
                     <div class="flexbox-container-vertical" >
                         <img src="images/web.jpg" alt="laptop image" style="max-width: 60%; margin-top: 20px;">
-                        <span class="devpathTitle" style="font-weight: bold;">Web developement</span>
+                        <span class="devpathTitle" style="font-weight: bold;">Web Developement</span>
                     </div>
                 </div>
             </div>
@@ -47,4 +48,5 @@
             </div>
     </section>
 </body>
+
 </html>
