--- a/mobile.html
+++ b/mobile.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="pages.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500" rel="stylesheet">
     <title>Mobile Developement</title>
 </head>
 <body>
-    
+    <section>
+        <h1 style="font-size: 65px">Mobile Developement</h1>
+        <h2>What it is and why learn</h2>
+        <p>
+            Mobile app development is the creation of an application that can live on different mobile devices.
+            The top two operating systems consumers use are the iOS platform and the Android platform.
+            The industry has a market evaluated at billions of dollars.
+        </p>
+    </section>
+
+
+    <h2>What to learn</h2>
+    <p>
+        There are different kinds of mobile applications. These include: Android apps, iOS apps, cross-plateform apps.
+    </p>
+
 </body>
 </html>
