--- a/linux.html
+++ b/linux.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="pages.css" media="all" />
     <title>Linux Administration</title>
 </head>
 <body>
-    
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="web.html">Web</a>
+        <a href="mobile.html">Mobile</a>
+        <a href="desktop.html">Desktop</a>
+        <a href="linux.html">Linux</a>
+        <a href="#about">About</a>
+      </div>
 </body>
 </html>
