--- a/mobile.html
+++ b/mobile.html
@@ -9,6 +9,14 @@
     <title>Mobile Developement</title>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="web.html">Web</a>
+        <a href="mobile.html">Mobile</a>
+        <a href="desktop.html">Desktop</a>
+        <a href="linux.html">Linux</a>
+        <a href="#about">About</a>
+      </div>
     <section>
         <h1 style="font-size: 65px">Mobile Developement</h1>
         <h2>What it is and why learn</h2>
