--- a/mobile.html
+++ b/mobile.html
@@ -17,21 +17,58 @@
         <a href="linux.html">Linux</a>
         <a href="#about">About</a>
       </div>
-    <section>
-        <h1 style="font-size: 65px">Mobile Developement</h1>
+      <section>
+        <h1>Mobile Developement</h1>
         <h2>What it is and why learn</h2>
         <p>
             Mobile app development is the creation of an application that can live on different mobile devices.
             The top two operating systems consumers use are the iOS platform and the Android platform.
             The industry has a market evaluated at billions of dollars.
         </p>
+        <div class="container">
+            <div class="flexbox-container">
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">ANDROID</span>
+                        <span class="platform-description">
+                            Native mobile apps are apps that are written in a language that's natively supported by the device OS vendor. 
+                    The underlying platform APIs are available 100% to the app code and the OS provides the UI component library.
+                    The build process converts this code into an executable app with native bytecode of the OS. For android this is done in either Java or Kotlin. 
+                        </span>
+                    </div>
+                </div>
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">IOS</span>
+                        <span class="platform-description">For iOS, this is typically done using the Swift programming language. </span>
+                    </div>
+                </div>
+            </div>
+            <div class="flexbox-container">
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">CROSS-PLATFORM</span>
+                        <span class="platform-description">Cross-platform mobile apps are apps that are written in one language and can run on all the platforms. 
+                            With cross-platform mobile apps, the language in which you write your app may not be the native language of the underlying device OS. 
+                            This implies that the code might be contained, bridged, or cross-compiled to the bytecode that can execute directly on the OS with the help of some support libraries.     </span>
+                    </div>
+                </div>
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">WEB APPLICATIONS</span>
+                        <span class="platform-description">Mobile web apps are a lightweight paradigm where you open a URL in your device's browser, but they look and feel like regular mobile app. 
+                            Mobile websites are not delivered as an installed app on the device, but they are an important paradigm to consider while building for a mobile device. 
+                            Developers can use two web site programming paradigms to create mobile web apps. </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-
-
-    <h2>What to learn</h2>
-    <p>
-        There are different kinds of mobile applications. These include: Android apps, iOS apps, cross-plateform apps.
-    </p>
-
+    <section>
+        <h2>What to learn</h2>
+        <p>
+            There are different kinds of mobile applications. These include: Android apps, iOS apps, cross-plateform apps.
+        </p>
+    </section>
 </body>
 </html>
