Added other pages

--- a/mobile.html
+++ b/mobile.html
@@ -19,6 +19,7 @@
       </div>
       <section>
         <h1>Mobile Developement</h1>
+        <img class="banner" src="images/banners/mobile_banner.jpeg" alt="mobile banner">
         <h2>What it is and why learn</h2>
         <p>
             Mobile app development is the creation of an application that can live on different mobile devices.
@@ -32,8 +33,8 @@
                         <span class="platform-name">ANDROID</span>
                         <span class="platform-description">
                             Native mobile apps are apps that are written in a language that's natively supported by the device OS vendor. 
-                    The underlying platform APIs are available 100% to the app code and the OS provides the UI component library.
-                    The build process converts this code into an executable app with native bytecode of the OS. For android this is done in either Java or Kotlin. 
+                            The underlying platform APIs are available 100% to the app code and the OS provides the UI component library.
+                            The build process converts this code into an executable app with native bytecode of the OS. For android this is done in either Java or Kotlin. 
                         </span>
                     </div>
                 </div>
@@ -49,8 +50,8 @@
                     <div class="flexbox-container-vertical" >
                         <span class="platform-name">CROSS-PLATFORM</span>
                         <span class="platform-description">Cross-platform mobile apps are apps that are written in one language and can run on all the platforms. 
-                            With cross-platform mobile apps, the language in which you write your app may not be the native language of the underlying device OS. 
-                            This implies that the code might be contained, bridged, or cross-compiled to the bytecode that can execute directly on the OS with the help of some support libraries.     </span>
+                                With cross-platform mobile apps, the language in which you write your app may not be the native language of the underlying device OS. 
+                                This implies that the code might be contained, bridged, or cross-compiled to the bytecode that can execute directly on the OS with the help of some support libraries.     </span>
                     </div>
                 </div>
                 <div class="platform">
