--- a/desktop.html
+++ b/desktop.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="pages.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="pages.css" media="all" />    
+    <link href="pages.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500" rel="stylesheet">
     <title>Desktop Application</title>
 </head>
 <body>
@@ -14,8 +16,74 @@
         <a href="mobile.html">Mobile</a>
         <a href="desktop.html">Desktop</a>
         <a href="linux.html">Linux</a>
-        <a href="#about">About</a>
+        <a href="about.html">About</a>
       </div>
+      <section>
+        <h1>Desktop Application Developement</h1>
+        <img class="banner" src="images/banners/desktop_banner.png" alt="desktop banner">
+        <h2>What it is and why learn</h2>
+        <p>
+            Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet 
+            (a private network).Web development can range from developing a simple single static page of plain text to complex
+             web applications, electronic businesses, and social network services. A more comprehensive list of tasks to which Web 
+             development commonly refers, may include Web engineering, Web design, Web content development, client liaison, 
+             client-side/server-side scripting, Web server and network security configuration, and e-commerce development.
+        </p>
+        <div class="container">
+            <div class="flexbox-container">
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">WINDOWS</span>
+                        <span class="platform-description">
+                            Lorem ipsum dolor sit amet. Est tempore voluptas cum nesciunt esse quo pariatur quis qui rerum quis et 
+                            totam nostrum et aspernatur voluptate! Et velit blanditiis ab aperiam exercitationem vel neque quam et 
+                            consectetur accusamus! Sit itaque omnis 33 beatae excepturi qui perferendis quia a error dolores non quis 
+                            nihil ut vero quisquam ut nihil incidunt. Et modi soluta ut veritatis temporibus sit aliquam consequatur 
+                            ut quibusdam provident est eveniet harum sit omnis officia et doloremque officiis.
+                        </span>
+                    </div>
+                </div>
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">MACINTOSH</span>
+                        <span class="platform-description">
+                            Lorem ipsum dolor sit amet. Est tempore voluptas cum nesciunt esse quo pariatur quis qui rerum quis et 
+                            totam nostrum et aspernatur voluptate! Et velit blanditiis ab aperiam exercitationem vel neque quam et 
+                            consectetur accusamus! Sit itaque omnis 33 beatae excepturi qui perferendis quia a error dolores non quis 
+                            nihil ut vero quisquam ut nihil incidunt. Et modi soluta ut veritatis temporibus sit aliquam consequatur 
+                            ut quibusdam provident est eveniet harum sit omnis officia et doloremque officiis.
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="flexbox-container">
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">LINUX</span>
+                        <span class="platform-description">
+                            Lorem ipsum dolor sit amet. Est tempore voluptas cum nesciunt esse quo pariatur quis qui rerum quis et 
+                            totam nostrum et aspernatur voluptate! Et velit blanditiis ab aperiam exercitationem vel neque quam et 
+                            consectetur accusamus! Sit itaque omnis 33 beatae excepturi qui perferendis quia a error dolores non quis 
+                            nihil ut vero quisquam ut nihil incidunt. Et modi soluta ut veritatis temporibus sit aliquam consequatur 
+                            ut quibusdam provident est eveniet harum sit omnis officia et doloremque officiis.
+                        </span>
+                    </div>
+                </div>
+                <div class="platform">
+                    <div class="flexbox-container-vertical" >
+                        <span class="platform-name">CROSS-PLATFORM</span>
+                        <span class="platform-description">
+                            Lorem ipsum dolor sit amet. Est tempore voluptas cum nesciunt esse quo pariatur quis qui rerum quis et 
+                            totam nostrum et aspernatur voluptate! Et velit blanditiis ab aperiam exercitationem vel neque quam et 
+                            consectetur accusamus! Sit itaque omnis 33 beatae excepturi qui perferendis quia a error dolores non quis 
+                            nihil ut vero quisquam ut nihil incidunt. Et modi soluta ut veritatis temporibus sit aliquam consequatur 
+                            ut quibusdam provident est eveniet harum sit omnis officia et doloremque officiis.
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
