add student number

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             Student Name: Ishanveer Gobin <br/>
             Student Number: 300135454 <br/> <br/>
             Student Name: Andie Samadoulougou <br/>
-            Student Number: 3XXXXXXX <br/>
+            Student Number: 300209487 <br/>
         </p>
       </section>
 </body>
