Changed icons + added quiz button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         </div>
     </section>
     <section>
+        <div class="quiz" id="quiz">
+            <div class="flexbox-container-vertical" >
+                <span class="quizTitle">Take our quiz!</span>
+            </div>
+        </div>
+    </section>
+    <section>
         <div class="container">
             <div class="flexbox-container">
                 <div class="devpath" id="mobile">
@@ -27,7 +34,7 @@
                 </div>
                 <div class="devpath" id="web">
                     <div class="flexbox-container-vertical" >
-                        <img src="images/web.jpg" alt="web icon" style="max-width: 60%; margin-top: 20px;">
+                        <img src="images/web.png" alt="web icon" style="max-width: 60%; margin-top: 20px;">
                         <span class="devpathTitle" style="font-weight: bold;">Web Developement</span>
                     </div>
                 </div>
