Added quiz page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             </div>
     </section>
     <script type="text/javascript">
+        document.getElementById("quiz").onclick = function () {
+            location.href = "quiz.html";
+        };
         document.getElementById("mobile").onclick = function () {
             location.href = "mobile.html";
         };
