--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,24 @@
     <title>Quiz</title>
 </head>
 <body>
+    <input type="text" name="" placeholder="Enter your name" id="name">
+    <button>Continue as Anonymous</button>
+
+
+
+    <h1>What languages are you familiar with?</h1>
+      <input type="radio" id="html" name="fav_language" value="HTML">
+      <label for="html">HTML</label><br>
+      <input type="radio" id="css" name="fav_language" value="CSS">
+      <label for="css">CSS</label><br>
+      <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+      <label for="javascript">JavaScript</label>
+
+    <h1>Are you looking to learn programming for school or for projects?</h1>
+    <button>School/University</button>
+    <button>Build cool personal projects</button>
+
+    <button></button>
     
 </body>
 </html>
