--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
                 </div>
             </div>
     </section>
+    <section>
+        <div class="container title">
+            <span>Languages</span>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="flexbox-container">
+                <div class="devpath" id="Javascipt">
+                    <div class="flexbox-container-vertical" >
+                        <img src="images/languages/javascript.png" alt="mobile icon" style="max-width: 60%; margin-top: 20px;">
+                        <span class="devpathTitle" style="font-weight: bold;">JavaScript</span>
+                    </div>
+                </div>
+                <div class="devpath" id="web">
+                    <div class="flexbox-container-vertical" >
+                        <img src="images/languages/python.png" alt="web icon" style="max-width: 60%; margin-top: 20px;">
+                        <span class="devpathTitle" style="font-weight: bold;">Python</span>
+                    </div>
+                </div>
+            </div>
+            <div class="flexbox-container">
+                <div class="devpath" id="desktop">
+                    <div class="flexbox-container-vertical" >
+                        <img src="images/languages/java.png" alt="desktop icon" style="max-width: 60%; margin-top: 20px;">
+                        <span class="devpathTitle" style="font-weight: bold;">Java</span>
+                    </div>
+                </div>
+                <div class="devpath" id="linux">
+                    <div class="flexbox-container-vertical" >
+                        <img src="images/languages/cplusplus.png" alt="linux icon" style="max-width: 60%; margin-top: 20px;">
+                        <span class="devpathTitle" style="font-weight: bold;">C/C++</span>
+                    </div>
+                </div>
+            </div>
+    </section>
     <script type="text/javascript">
         document.getElementById("quiz").onclick = function () {
             location.href = "quiz.html";
