--- a/welcome.html
+++ b/welcome.html
@@ -100,32 +100,32 @@
     <script type="text/javascript">
       // get values from local storage 
         // get name 
-        let username =  sessionStorage.getItem("username");
+        let username =  localStorage.getItem("username");
         document.getElementById("welcome").innerHTML=  "Welcome to our website " + username;
 
         // get languages 
-        let html = parseInt(sessionStorage.getItem("html"));
-        let css = parseInt(sessionStorage.getItem("css")); 
-        let js = parseInt(sessionStorage.getItem("js")); 
-        let python = parseInt(sessionStorage.getItem("python")); 
-        let java =  parseInt(sessionStorage.getItem("java")); 
-        let cpp = parseInt(sessionStorage.getItem("cpp"));  
+        let html = parseInt(localStorage.getItem("html"));
+        let css = parseInt(localStorage.getItem("css")); 
+        let js = parseInt(localStorage.getItem("js")); 
+        let python = parseInt(localStorage.getItem("python")); 
+        let java =  parseInt(localStorage.getItem("java")); 
+        let cpp = parseInt(localStorage.getItem("cpp"));  
 
         // get reason for learning 
-        let reason =  sessionStorage.getItem("ReasonForLearning"); 
+        let reason =  localStorage.getItem("ReasonForLearning"); 
         
         // get patience 
-        let patience =   sessionStorage.getItem("shareTime"); 
+        let patience =   localStorage.getItem("shareTime"); 
 
         // get interests 
-        let mobile  =  sessionStorage.getItem("mobileInterest");
-        let desktop = sessionStorage.getItem("desktopInterest"); 
-        let web = sessionStorage.getItem("webInterest");
-        let all = sessionStorage.getItem("allInterest"); 
+        let mobile  =  localStorage.getItem("mobileInterest");
+        let desktop = localStorage.getItem("desktopInterest"); 
+        let web = localStorage.getItem("webInterest");
+        let all = localStorage.getItem("allInterest"); 
 
         // display results (temporary) - juste pour etre sur que les bonnes valeura sont transm8ses 
-      //   document.getElementById("values").innerHTML=  "Values received : " + username  + "  "  + html.toString() +  " " + css.toString() +  " " + js.toString() +  " " + python.toString() +  " " + java.toString() +  " " + cpp.toString() +  " " + reason +  " " + patience +  " " + mobile +  " " + desktop +  " " + web +  " " + all;
-        alert("Values received : " + username  + "  "  + html.toString() +  " " + css.toString() +  " " + js.toString() +  " " + python.toString() +  " " + java.toString() +  " " + cpp.toString() +  " " + reason +  " " + patience +  " " + mobile +  " " + desktop +  " " + web +  " " + all);
+       // document.getElementById("values").innerHTML=  "Values received : " + username  + "  "  + html.toString() +  " " + css.toString() +  " " + js.toString() +  " " + python.toString() +  " " + java.toString() +  " " + cpp.toString() +  " " + reason +  " " + patience +  " " + mobile +  " " + desktop +  " " + web +  " " + all;
+        // alert("Values received : " + username  + "  "  + html.toString() +  " " + css.toString() +  " " + js.toString() +  " " + python.toString() +  " " + java.toString() +  " " + cpp.toString() +  " " + reason +  " " + patience +  " " + mobile +  " " + desktop +  " " + web +  " " + all);
         // create scenario
         let path = ""; 
         let recommended_language = ""; 
